@@ -441,11 +441,12 @@ void db_foreach(struct dbt *table,int (*func)(void*,void*,va_list),...)
 			continue;
 		sp=0;
 		while(1){
-			if (!p->data) {
-				printf("Warning: no data for key %d in db_foreach (db.c) !\n",(int)p->key);
-			} else {
-				func(p->key, p->data, ap);
-			}
+			//reverted it back. sorry that brought thios bug from Freya [Lupus]
+			//if (!p->data) {
+			//	printf("Warning: no data for key %d in db_foreach (db.c) !\n",(int)p->key);
+			//} else {
+			func(p->key, p->data, ap);
+			//}
 			if((pn=p->left)!=NULL){
 				if(p->right){
 					stack[sp++]=p->right;
